[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbai_logging"
version = "0.1.0"
dependencies = [
    "ruff==0.14.9",
    "pre-commit==4.5.0",
    "scipy==1.16.3",
    "lxml==6.0.2",
    "rerun-sdk==0.27.3",
    "trimesh==4.10.1",
    "robot_descriptions==1.22.0",
    "pin==3.8.0",
    "pycollada==0.9.2",
]

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 2
